# Virtual

./: .gitignore  .pre-commit-config.yaml  Makefile  POLYGLOT_CONFIG.html  POLYGLOT_CONFIG.md  Pipfile  README.md  VersionHistory.md  VirsionHistory.md  Virtual.py  VirtualSwitch.py  Virtual_old.py  exampleConfigFile.yaml  pyproject.toml  requirements.txt  restapi.md  server.json  udi-Virtual-pg3.py
DBfiles/: readme.txt
nodes/: Controller.py  VirtualDelay.py  VirtualGarage.py  VirtualGeneric.py  VirtualSwitch.py  VirtualTemp.py  VirtualTempC.py  VirtualTempC_old.py  VirtualTemp_old.py  VirtualToggle.py  VirtualoffDelay.py  VirtualonDelay.py  VirtualonOnly.py  __init__.py
profile/: version.txt
profile/editor/: editors.xml
profile/nls/: en_us.txt
profile/nodedef/: nodedefs.xml
scripts/: run-tests.sh
test/: conftest.py  testEvents.py  test_Controller.py  test_VirtualGarage.py  test_VirtualGeneric.py  test_VirtualSwitch.py  test_VirtualTemp.py  test_VirtualToggle.py  test_VirtualoffDelay.py  test_VirtualonDelay.py  test_VirtualonOnly.py  test_node_funcs.py  test_time_utils.py
utils/: node_funcs.py  time.py
