[project]
name = "udi-virtual-pg3x"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "udi-interface",
    "requests",
    "aiohttp",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pyaml",
    "markdown2",
    "pylsp-mypy",
    "pyls",
    "pytest",
    "pre-commit",
    "pytest-cov",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ty.rules]
possibly-missing-import = "ignore"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"
invalid-assignment = "ignore"
